--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
+    <title>Flower Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
-
+  
     <!-- Link and CDN required for bootstrap -->
 
     <!-- Google Font - Lato -->
@@ -14,21 +14,49 @@
       rel="stylesheet"
     />
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/style/stylesheet.css"/>
   </head>
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <header>
+      <img src="./assets/images/logo.png" alt="logo">
+    </header>
+
     <!--Banner Jumbotron of the image-->
+    <div class="jumbotron jumbotron-fluid hero_text">
+      <div class="heading">
+        <h1 class="display-4">Beautiful Flowers</h1>
+        <button type="button">Learn More</button>
+      </div>
+    </div>
 
     <!--Four containers with img / text-->
     <!-- 4 containers -->
+    <div id="icons" >
+      <div class="row container-fluid icon-block">
+        <div class="col-xl-3 col-md-6 col-sm-12 feature">
+          <img src="assets/images/flower-icon.png">Flowers
+        </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+        <div class="col-xl-3 col-md-6 col-sm-12 feature">
+          <img src="assets/images/payment-icon.png">Payments
+        </div>
 
-    <!-- Delivery Div -->
+        <div class="col-xl-3 col-md-6 col-sm-12 feature">
+          <img src="assets/images/phone-icon.png">Consultation
+        </div>
+
+        <div class="col-xl-3 col-md-6 col-sm-12 feature">
+          <img src="assets/images/truck-icon.png">Delivery
+        </div>
+      </div>
+    </div>
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
