--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -1,17 +1,40 @@
 <!-- Do not forget to add in the Bootstrap CDN's so that you can utilise the pre-constructed HTML elements -->
 <!DOCTYPE html>
 <html class="no-js">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
     <meta name="description" content="" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
-  </head>
-  <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+
+<body>
     <!-- CODE HERE -->
-  </body>
+    <nav class="navbar d-flex justify-content-start">
+        <a class="navbar-item m-2" href="#"></a>
+        <img src="assets/bootstrap.png" width="50px"></a>
+        <a class="navbar-item text-decoration-none mx-5" href="# ">Home</a>
+        <a class="navbar-item text-decoration-none" href="# ">Link</a>
+    </nav>
+
+    <ul class="list-group">
+        <li class="list-group-item ">Item I</li>
+        <li class="list-group-item ">Item II</li>
+        <li class="list-group-item ">Item III</li>
+        <li class="list-group-item ">Item IV</li>
+        <li class="list-group-item ">Item V</li>
+    </ul>
+
+    <button class="btn btn-primary ">Primary</button>
+    <button class="btn btn-secondary ">Secondary</button>
+    <button class="btn btn-success ">Success</button>
+    <button class="btn btn-danger ">Danger</button>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous ">
+    </script>
+</body>
+
 </html>
