--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,34 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title>Flower Shop BS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <!--Header (flower shop logo block element)-->
+
     <!--Banner Jumbotron of the image-->
+    <div class="jumborton">
+        <img src="assets/images/logo.png">
+    </div>
 
-    <!--Four containers with img / text-->
+    <!-- <img src="assets/images/flowershop.jpg"> -->
+    <div class="cover d-flex flex-column align-items-center justify-content-center">
+        <h1>Beautiful Flowers</h1>
+        <div class="button btn d-flex align-items-center justify-content-center">
+            Learn more
+        </div>
+    </div>
+
+
+
+
+    <!-- !--Four containers with img / text-->
     <!-- 4 containers -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="row col-md">
+                <div class="col-sm d-flex align-items-center justify-content-center m-2">
+                    <img src="assets/images/flower-icon.png ">
+                    <p> Flowers for every <br>kind of situation</p>
+                </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+                <!-- Payments Div -->
+                <div class=" col-sm d-flex align-items-center justify-content-center m-2">
+                    <img src="assets/images/payment-icon.png ">
+                    <p> All major payments <br>kinds accepted</p>
+                </div>
 
-    <!-- Delivery Div -->
+            </div>
+
+            <!-- Consultation Div -->
+            <div class=" row col-md">
+                <div class="col-sm d-flex align-items-center justify-content-center m-2">
+                    <img src="assets/images/phone-icon.png ">
+                    <p> Free consultation</p>
+                </div>
+                <!-- Delivery Div -->
+                <div class=" col-sm d-flex align-items-center justify-content-center m-2">
+                    <img src="assets/images/truck-icon.png ">
+                    <p> City wide delivery</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 
     <!--Scripts required for bootstrap CDN-->
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
+</body>
+
 </html>
