--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <title>Flower Shop BS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
     <!-- Link and CDN required for bootstrap -->
 
     <!-- Google Font - Lato -->
@@ -19,9 +23,65 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav class="navbar narbar-expend-lg navbar-light bg-light">
+      <a href="#" class="navbar-brand">
+        <img
+          src="/Exercise_B/assets/images/logo.png"
+          alt="Brand"
+          style="height: 50px"
+        />
+      </a>
+    </nav>
     <!--Banner Jumbotron of the image-->
+    <div class="bgim">
+      <div class="text">
+        <h1>Beautiful Flowers</h1>
+        <button class="btn btn-success">Learn more</button>
+      </div>
+    </div>
 
     <!--Four containers with img / text-->
+    <div class="secondpart">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col">
+                <img src="/Exercise_B/assets/images/flower-icon.png">
+              </div>
+              <div class="col">
+                <a>Flowers for every kind of situation</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col">
+                <img src="/Exercise_B/assets/images/payment-icon.png">
+              </div>
+              <div class="col">All major payments kinds accepted</div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col">
+                <img src="/Exercise_B/assets/images/phone-icon.png">
+              </div>
+              <div class="col">Free consulation</div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="row d-flex align-items-center">
+            <div class="col">
+              <img src="/Exercise_B/assets/images/truck-icon.png">
+            </div>
+            <div class="col">City wide develivery</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- 4 containers -->
 
     <!-- Payments Div -->
@@ -30,5 +90,16 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+      integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
