--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -10,8 +10,47 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
     <!-- CODE HERE -->
+    
+    <nav class="navbar navbar-expand-lg bg-light">
+      <a class="navbar-brand" href="#">
+          <img alt="Brand" src="assets/bootstrap.png" style="height:50px">
+      </a>
+      <ul class="navbar-nav">
+          <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+          </li>
+      </ul>
+    </nav>
+
+    <ul class="list-group">
+      <li class="list-group-item">
+          Item I
+      </li>
+      <li class="list-group-item">
+          Item II
+      </li>
+      <li class="list-group-item">
+          Item III
+      </li>
+      <li class="list-group-item">
+          Item IV
+      </li>
+      <li class="list-group-item">
+          Item V
+      </li>
+    </ul>
+
+    <button class="btn btn-primary btn-">Primary</button>
+    <button class="btn btn-secondary btn-">Secondary</button>
+    <button class="btn btn-success btn-">Success</button>
+    <button class="btn btn-danger">Danger</button>
+    
   </body>
 </html>
