--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,6 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <!-- Google Font - Lato -->
     <link
@@ -18,17 +19,53 @@
   </head>
 
   <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
-
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
-
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
-
-    <!--Scripts required for bootstrap CDN-->
+    <header>
+      <nav class="navbar">
+        <a href="#"><img src="../Exercise_B/assets/images/logo.png" alt="Logo" style="margin-left: 40px;"></a>
+      </nav>
+    </header>
+    <div class="image">
+      <p class="display-3">Beautiful Flowers</p>
+      <button class="btn btn-success">Learn more</button>
+    </div>
+    <main class="container-fluid">
+      <div class="body4 text-center">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-6">
+                <img src="../Exercise_B/assets/images/flower-icon.png" alt="FlowerIcon">
+              </div>
+              <p class="col-md-6">Flower for every<br />kind of situation</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-6">
+                <img src="../Exercise_B/assets/images/payment-icon.png" alt="FlowerIcon">
+              </div>  
+                <p class="col-md-6">All major payment<br />kinds accepted</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-6">
+                <img src="../Exercise_B/assets/images/phone-icon.png" alt="FlowerIcon">
+              </div>
+              <p class="col-md-6">Free consultation</p>
+            </div>
+          </div>
+            <div class="col-lg-3 col-md-6">
+              <div class="row d-flex align-items-center">
+                <div class="col-md-6">
+                  <img src="../Exercise_B/assets/images/truck-icon.png" alt="FlowerIcon">
+                </div>
+                <p class="col-md-6">City wide delivery</p>
+              </div>
+            </div>
+        </div>
+      </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
   </body>
 </html>
