--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,16 +19,69 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav class="navbar navbar-expand-lg bg-white">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="/Exercise_B/assets/images/logo.png" alt="" width="150">
+        </a>
+      </div>
+    </nav>
+
     <!--Banner Jumbotron of the image-->
+    <div class="jumbotron d-flex justify-content-center align-items-center">
+      <div Class="cover_text">
+        <h1>Beautiful Flowers</h1>
+        <button class="btn btn-success btn-md" href="#" role="button">Learn more</button>
+      </div>
+    </div>
+
 
     <!--Four containers with img / text-->
     <!-- 4 containers -->
+    <div class="fourcontainer">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col">
+                <img src="/Exercise_B/assets/images/flower-icon.png">
+              </div>
+              <div class="col">
+                <a>Flowers for every kind of situation</a>
+              </div>
+            </div>
+          </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
+          <div class="col-lg-3 col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col">
+                <img src="/Exercise_B/assets/images/payment-icon.png">
+              </div>
+              <div class="col">All major payments kinds accepted</div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col">
+                <img src="/Exercise_B/assets/images/phone-icon.png">
+              </div>
+              <div class="col">Free consulation</div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="row d-flex align-items-center">
+            <div class="col">
+              <img src="/Exercise_B/assets/images/truck-icon.png">
+            </div>
+            <div class="col">City wide develivery</div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+
   </body>
 </html>
