--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -44,26 +44,26 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-xl-3 col-md-3 col-sm-12">
-            <img src="../Exercise_B/assets/images/flower-icon.png" alt="">
+            <img src="../Exercise_B/assets/images/flower-icon.png" class="container d-flex align-items-center justify-content-center" alt="">
             
           </div>
           <div class="col-xl-3 col-md-3 col-sm-12">
             Flowers for every kind of situation
           </div>
           <div class="col-xl-3 col-md-3 col-sm-12">
-            <img src="../Exercise_B/assets/images/payment-icon.png" alt="">
+            <img src="../Exercise_B/assets/images/payment-icon.png" class="container d-flex align-items-center justify-content-center" alt="">
+          </div>
+          <div class="col-xl-3 col-md-3 col-sm-12" >
+            All major payment kinds accepted 
           </div>
           <div class="col-xl-3 col-md-3 col-sm-12">
-            All major payment kinds accepted
-          </div>
-          <div class="col-xl-3 col-md-3 col-sm-12">
-            <img src="../Exercise_B/assets/images/phone-icon.png" alt="">
+            <img src="../Exercise_B/assets/images/phone-icon.png" class="container d-flex align-items-center justify-content-center" alt="">
           </div>
           <div class="col-xl-3 col-md-3 col-sm-12">
             Free consultation
           </div>
           <div class="col-xl-3 col-md-3 col-sm-12">
-            <img src="../Exercise_B/assets/images/truck-icon.png" alt="">
+            <img src="../Exercise_B/assets/images/truck-icon.png" class="container d-flex align-items-center justify-content-center" alt="">
           </div>
           <div class="col-xl-3 col-md-3 col-sm-12">
             City wide delivery
