--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,12 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -18,17 +23,66 @@
   </head>
 
   <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+    <main class="gridcontainer">
+      <div class="topbar">
+        <img src="/Exercise_B/assets/images/logo.png" alt="Flowershop logo" />
+      </div>
+      <div class="midbackdrop"></div>
+      <div class="mid">
+        <h1 class="header">Beautiful Flowers</h1>
+        <button class="button">Learn more</button>
+      </div>
+    </main>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="row col-lg-3 col-md-6 col-sm-12 color">
+          <img
+            class="col-6"
+            id="flowericon"
+            src="/Exercise_B/assets/images/flower-icon.png"
+            alt="Flower Icon"
+          />
+          <p class="col-6 text-center pt-5">
+            Flowers for every<br />kind of situation
+          </p>
+        </div>
+        <div class="row col-lg-3 col-md-6 col-sm-12 color">
+          <img
+            class="col-6"
+            id="moneyicon"
+            src="/Exercise_B/assets/images/payment-icon.png"
+            alt="Money Icon"
+          />
+          <p class="col-6 text-center pt-5">
+            All major payments<br />kinds accepted
+          </p>
+        </div>
+        <div class="row col-lg-3 col-md-6 col-sm-12 color">
+          <img
+            class="col-6"
+            id="phoneicon"
+            src="/Exercise_B/assets/images/phone-icon.png"
+            alt="Phone Icon"
+          />
+          <p class="col-6 text-center pt-5">Free consultation</p>
+        </div>
+        <div class="row col-lg-3 col-md-6 col-sm-12 color">
+          <img
+            class="col-6"
+            id="truckicon"
+            src="/Exercise_B/assets/images/truck-icon.png"
+            alt="Truck Icon"
+          />
+          <p class="col-6 text-center pt-5">City wide delivery</p>
+        </div>
+      </div>
+    </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
-
-    <!--Scripts required for bootstrap CDN-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
