--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -10,8 +10,63 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   </head>
   <body>
     <!-- CODE HERE -->
+    
+
+    <div class ="container">
+      <div class="row">
+      <div class="col-1 ms-3">
+        <img src="./assets/bootstrap.png"  width="40px"  alt="">
+      </div>
+      <div class="col-1 m-2">
+        <a href="home.html"> Home</a>
+      </div>
+      <div class="col-sm m-2">
+        <a href="home.html"> Link</a>
+      </div>
+  </div>
+
+  <div class ="container">
+    <div class="column">
+    <div class="col-sm border-bottom">
+      <p></p>Item I</p>
+    </div>
+    <div class="col-sm border-bottom">
+      <p></p>Item II</p>
+    </div>
+    <div class="col-sm border-bottom">
+      <p></p>Item III</p>
+    </div>
+    <div class="col-sm border-bottom">
+      <p></p>Item IV</p>
+    </div>
+    <div class="col-sm border-bottom">
+      <p></p>Item V</p>
+    </div>
+</div>
+
+
+    <div class ="position-relative">
+      <div class="position-absolute top-0 start-0 row">
+        <div class="col-2 me-2" >
+          <button class ="btn btn-primary ms-n2">Primary</button>
+        </div>
+        <div class="col-2 me-4">
+          <button class ="btn btn-secondary">Secondary</button>
+        </div>
+        <div class="col-2 me-2 ms-1">
+          <button class ="btn btn-success">Success</button>
+        </div>
+        <div class="col-2">
+          <button class ="btn btn-danger">Danger</button>
+        </div>
+    </div>
+    
+
+    </grid>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </html>
