--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -19,7 +19,7 @@
         <img src="assets/bootstrap.png" style ="margin-left: 20px" height="50" width="50" alt="bootstrap">
       </a>
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
