--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,6 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <!-- Google Font - Lato -->
     <link
@@ -17,18 +18,92 @@
     <link rel="stylesheet" href="./assets/style/stylesheet.css" />
   </head>
 
+
+
   <body>
     <!--Header (flower shop logo block element)-->
+    <header> <img src="./assets/images/logo.png" alt="logo"></header>
+
+
     <!--Banner Jumbotron of the image-->
+    <div class="intro">
+      <h1> Beautiful Flowers </h1>
+
+      <button> Learn more </button>
+      <div class="background">
+
+      </div>
+    </div>
+
+
 
     <!--Four containers with img / text-->
+
     <!-- 4 containers -->
+<div class="info">
+     <div class="container-fluid">   
+    <!-- Flowers Div -->
+    <div class="row" style="margin-bottom:20px">
+    <div class="grid-row col-lg-3 col-sm-12 col-md-6"> 
+    <img src="assets/images/flower-icon.png" alt="flower">
+    <p>Flowers for every kind of situation</p>
+  </div>
+  
 
     <!-- Payments Div -->
+    <div class="payment grid-row col-lg-3 col-sm-12 col-md-6">       
+      <img src="assets/images/payment-icon.png" alt="payment">
+      <p>All majot payments kinds accepted</p>
+    </div>
+
     <!-- Consultation Div -->
+    <div class="consultation grid-row col-lg-3 col-sm-12 col-md-6">
+      <img src="assets/images/phone-icon.png" alt="phone">
+      <p>Free consulation</p>
+    </div>
 
     <!-- Delivery Div -->
+    <div class="delivery grid-row col-lg-3 col-sm-12 col-md-6"> 
+      <img src="assets/images/truck-icon.png" alt="truck">
+      <p>City wide delivery</p>
+    </div>
+    </div>
+
+
+  </div>
+
+  </div>
+
+
+  <!-- testing -->
+  <!-- <div class="container">
+
+    <div class="row">
+
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        One of three columns
+      </div>
+
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        One of three columns
+      </div>
+
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        One of three columns
+      </div>
+
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        One of three columns
+      </div>
+
+    </div>
+
+  </div> -->
+
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
+
+
 </html>
