--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -27,14 +27,14 @@
 
       <div class ="row" style="height: 50px">
         <div class="col-sm-1"></div>
-        <div class="col-sm-3 bg-info">
+        <div class="col-sm-3">
           <div class="logo1"></div>
         </div>
       </div>
 
       <div class ='row backgroundFlower' style="height:500px">
           <div class="col text-center align-self-center">
-            <h1 class ='header text-white' >Beautiful Flowers</h1>
+            <h1 class ='header text-white'>Beautiful Flowers</h1>
             <button type="button" class="btn btn-success learnMorebtn" >Learn More</button>
             </div>
           </div>
