--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,6 +7,14 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="/FTWD_Web_Day_03/Exercise_B/style.css" />
 
     <!-- Google Font - Lato -->
     <link
@@ -14,21 +22,115 @@
       rel="stylesheet"
     />
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+    <link rel="stylesheet" href="" />
   </head>
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <!-- additional requirment widget1 -->
+    <header>
+      <a
+        href="https://www.youtube.com/watch?v=nxnfjHvOLko&ab_channel=SaVanityVan"
+        target="_blank"
+        ><img src="./assets/images/logo.png" alt=""
+      /></a>
+    </header>
     <!--Banner Jumbotron of the image-->
+    <!-- additional requiremnt widget 2 -->
+    <div class="content-container">
+      <div class="content-child1">Beautiful Flowers</div>
+      <div class="content-child2">
+        <button class="learn-more-button">Learn More</button>
+      </div>
+      <div class="content-child3">
+        <iframe
+          width="400px"
+          height="225px"
+          src="https://www.youtube.com/embed/nxnfjHvOLko"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+    <!-- additional requirment -->
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
+    <div class="back">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <table>
+              <tr>
+                <td>
+                  <img
+                    src="./assets/images/flower-icon.png"
+                    alt=""
+                    class="icon"
+                  />
+                </td>
+                <td class="description">Flowers for every kind of situation</td>
+              </tr>
+            </table>
+          </div>
+          <div class="col-sm">
+            <table>
+              <tr>
+                <td>
+                  <img
+                    src="./assets/images/payment-icon.png"
+                    alt=""
+                    class="icon"
+                  />
+                </td>
+                <td class="description">All major payments kinds accepted</td>
+              </tr>
+            </table>
+          </div>
+          <div class="col-sm">
+            <table>
+              <tr>
+                <td>
+                  <img
+                    src="./assets/images/phone-icon.png"
+                    alt=""
+                    class="icon"
+                  />
+                </td>
+                <td class="description">Free consulation</td>
+              </tr>
+            </table>
+          </div>
+          <div class="col-sm">
+            <table>
+              <tr>
+                <td>
+                  <img
+                    src="./assets/images/truck-icon.png"
+                    alt=""
+                    class="icon"
+                  />
+                </td>
+                <td class="description">City wide Delivery</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!--Scripts required for bootstrap CDN-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+      integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
